--- a/mmwml_fraud_detection_v2.ipynb
+++ b/mmwml_fraud_detection_v2.ipynb
@@ -1263,9 +1263,7 @@
    },
    "outputs": [],
    "source": [
-    "path_to_save = '/content/competitions/ieee-fraud-detection/' + submission_name\n",
-    "#df_test[['TransactionID', 'isFraud']].to_csv('/content/competitions/ieee-fraud-detection/submission_v1.csv', index=False)\n",
-    "df_test[['TransactionID', 'isFraud']].to_csv(path_to_save, index=False)"
+    "df_test[['TransactionID', 'isFraud']].to_csv(submission_name, index=False)"
    ]
   },
   {
